--- a/app/src/main/res/layout/movie_pager_item.xml
+++ b/app/src/main/res/layout/movie_pager_item.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+   >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -39,9 +43,8 @@
             android:layout_height="wrap_content"
             android:id = "@+id/detailCriticsScore"
             android:layout_marginLeft="270dp"
-            android:layout_alignParentBottom = "true"
-            android:layout_below = "@id/detailTitle"
-            android:layout_marginTop="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="200dp"
             android:textSize="18sp"/>
 
        <ImageView
@@ -72,9 +75,8 @@
             android:layout_height="wrap_content"
             android:id = "@+id/detailAudienceScore"
             android:layout_marginLeft="450dp"
-            android:layout_alignParentBottom = "true"
-            android:layout_below = "@id/detailTitle"
-            android:layout_marginTop="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="200dp"
             android:textSize="18sp"/>
 
 
@@ -109,3 +111,4 @@
         android:layout_marginTop="10dp"/>
 
 </LinearLayout>
+</ScrollView>
